coinflip image added, still have to fix the spacing between the 2 elements and the img size

--- a/src/components/Coinflip/Coinflip.css
+++ b/src/components/Coinflip/Coinflip.css
@@ -1,3 +1,10 @@
+.coinflip-container-main {
+    display:flex;   
+    justify-content: center;
+    gap: 12rem;
+    width: 100%;
+}
+
 .coinflip-div{
     display: flex;
     flex-direction: column;
@@ -11,6 +18,7 @@
     box-shadow: 5px 10px 16px black;
     margin-top: 45px;
 }
+
 
 .below-head{
     display: flex;
